# optics-ring-generator

./: .gitignore  CREATE-REPO-FIRST.md  Cargo.toml  DISTRIBUTION.md  GITHUB-ACTIONS-GUIDE.md  INSTALLER-INSTRUCTIONS.md  OpticsRingGenerator-Installer.ps1  OpticsRingGenerator-SingleFile-Installer.ps1  OpticsRingGenerator-Universal-Installer.ps1  OpticsRingGenerator-Windows-Complete-Demo.ps1  OpticsRingGenerator-macOS-Installer.sh  PUSH-TO-GITHUB.md  README.md  WHERE-ARE-MY-INSTALLERS.md  WINDOWS-BUILD-GUIDE.md  WINDOWS-INSTALLATION-GUIDE.md  WINDOWS-INSTALLER-README.txt  build-complete-windows-installer.ps1  build-cross-platform.sh  build-dist.sh  build-windows-installer.ps1  create-complete-windows-installer.sh  create-local-windows-installer.sh  create-macos-app.sh  create-single-file-installer.sh  create-universal-installer.sh  create-windows-installer.sh  examples.sh  test_directory_browser.sh  verify_directory_browser.sh
.github/: copilot-instructions.md
.github/workflows/: build-and-release.yml
installer/: installer.nsi  launcher.cpp
src/: main.rs  ui.rs
