[package]
name = "optics-ring-generator"
version = "0.1.0"
edition = "2021"
description = "CLI tool for generating 3D printable precision optics support rings"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
stl_io = "0.7"
nalgebra = "0.32"
anyhow = "1.0"
ratatui = "0.26"
crossterm = "0.27"
